[package]
name = "recorder_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.24", features = ["derive"] }
noneifempty = "0.1"

[dev-dependencies]
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
